--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   },
   "scripts": {
     "build": "NODE_ENV=production run-s clean build:eleventy build:cachekill",
-    "build:cachekill": "cachekill -r -s 'docs/**/!(*.html)' -t 'docs/**/*.{js,css,html}'",
+    "build:cachekill": "cachekill -r -s 'docs/**/!(*.html) | .nojekyll' -t 'docs/**/*.{js,css,html}'",
     "build:eleventy": "eleventy",
     "clean": "rimraf docs",
     "dev": "run-p dev:*",
